--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
       <h2>🟦 Jak to działa?</h2>
       <div class="checklist">
-        <span>📞 Zadzwoń lub napisz do nas – krótki opis auta, adres i termin odbioru</span>
+        <span>📝 Wypelnij formularz ponizej</span>
+        <span>📞 My oddzwonimy do ciebie aby potwierdzic wszystko</span>
         <span>📝 Podpisz prostą umowę kupna-sprzedaży</span>
         <span>🚛 Odbieramy auto lawetą – Ty nie musisz nic organizować</span>
-        <span>🪑 Oddajemy auto na legalną utylizację</span>
         <span>💵 Otrzymujesz 100 zł gotówką lub przelewem</span>
       </div>
 
@@ -155,4 +155,5 @@
     });
   </script>
 </body>
+
 </html>
