--- a/index.html
+++ b/index.html
@@ -1,159 +1,139 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zlomto.pl – Skup aut za 100 zł</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ZŁOMTO.PL – Sprzedaj auto za 100 zł</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f7f7f7;
-      color: #111;
-      padding: 1rem;
+      background-color: #f8f9fa;
+      color: #212529;
+      line-height: 1.6;
     }
     header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      text-align: center;
+      padding: 2rem 1rem;
+      background-color: #ffffff;
     }
     header img {
-      height: 60px;
-    }
-    main {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    .car-loop {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin: 2rem 0;
-      animation: carLoop 10s linear infinite;
-    }
-    .car-silhouette {
-      width: 80px;
-      height: 40px;
-      background: url('car-silhouette.png') no-repeat center center / contain;
-      filter: brightness(0);
-    }
-    @keyframes carLoop {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
-    }
-    section {
-      max-width: 800px;
-      margin: auto;
-      margin-bottom: 3rem;
-      text-align: left;
-      padding: 0 1rem;
-    }
-    h1 { font-size: 2rem; margin-bottom: 1rem; text-align: center; }
-    .checklist { margin: 1rem 0; }
-    .checklist span { display: block; margin-bottom: 0.5rem; }
-    form {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    form input, form textarea {
-      width: 100%;
+      max-width: 200px;
       margin-bottom: 1rem;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
     }
-    form button {
-      background: black;
-      color: white;
-      border: none;
-      padding: 0.75rem 2rem;
+    h1 {
+      font-size: 2rem;
+      font-weight: 800;
+      color: #000000;
+    }
+    .banner {
+      background: url('car-silhouette.png') no-repeat center/contain;
+      height: 150px;
+      margin-top: 1rem;
+      animation: slide-in 6s infinite linear;
+    }
+    @keyframes slide-in {
+      from { background-position: 100% center; }
+      to { background-position: 0% center; }
+    }
+    .slogan {
+      font-size: 1.25rem;
+      margin: 1rem auto;
+      text-align: center;
+      max-width: 800px;
+    }
+    .form-container {
+      background-color: #ffffff;
+      padding: 2rem;
+      margin: 2rem auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      max-width: 600px;
+    }
+    .form-container h2 {
+      margin-bottom: 1rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    label {
+      font-weight: 600;
+    }
+    input, textarea {
+      padding: 0.75rem;
+      border: 1px solid #ced4da;
       border-radius: 4px;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #000000;
+      color: #ffffff;
+      padding: 0.75rem;
+      border: none;
+      border-radius: 4px;
+      font-size: 1rem;
+      font-weight: 600;
       cursor: pointer;
     }
-    .success {
-      display: none;
-      margin-top: 1rem;
-      color: green;
-      font-weight: 600;
-      text-align: center;
+    button:hover {
+      background-color: #333333;
     }
   </style>
 </head>
 <body>
   <header>
-    <div></div>
-    <img src="logo - zlomto.pl.png" alt="Zlomto.pl Logo" />
+    <img src="logo - zlomto.pl.png" alt="ZŁOMTO.PL logo">
+    <h1>Sprzedaj auto za 100 zł – legalnie, szybko i bezpiecznie</h1>
+    <div class="banner"></div>
+    <p class="slogan">Bez stresu i formalności – my zajmiemy się resztą. Wypełnij formularz i odbierz umowę kupna-sprzedaży!</p>
   </header>
 
-  <main>
-    <div class="car-loop">
-      <div class="car-silhouette"></div>
-      <div class="car-silhouette"></div>
-      <div class="car-silhouette"></div>
-    </div>
+  <section class="form-container">
+    <h2>Formularz zgłoszeniowy</h2>
+    <form action="https://formspree.io/f/xwkgrvze" method="POST">
+      <label for="name">Imię i nazwisko właściciela</label>
+      <input type="text" id="name" name="Imię i nazwisko" required>
 
-    <h1>Skupujemy auta w każdym stanie – szybko i bezproblemowo!</h1>
-    <section>
-      <h2>🟨 Dlaczego my?</h2>
-      <div class="checklist">
-        <span>✅ Odbiór lawetą – bez kosztów i stresu</span>
-        <span>✅ Gotówka od ręki (100 zł za auto)</span>
-        <span>✅ Załatwiamy formalności za Ciebie</span>
-        <span>✅ Legalny proces demontażu</span>
-        <span>✅ Umowa kupna-sprzedaży = 100% bezpieczeństwa</span>
-      </div>
+      <label for="address">Adres zamieszkania</label>
+      <input type="text" id="address" name="Adres zamieszkania" required>
 
-      <h2>🟦 Jak to działa?</h2>
-      <div class="checklist">
-        <span>📝 Wypelnij formularz ponizej</span>
-        <span>📞 My oddzwonimy do ciebie aby potwierdzic wszystko</span>
-        <span>📝 Podpisz prostą umowę kupna-sprzedaży</span>
-        <span>🚛 Odbieramy auto lawetą – Ty nie musisz nic organizować</span>
-        <span>💵 Otrzymujesz 100 zł gotówką lub przelewem</span>
-      </div>
+      <label for="pesel">PESEL właściciela</label>
+      <input type="text" id="pesel" name="PESEL" required>
 
-      <h2>🟧 Co będzie potrzebne?</h2>
-      <ul>
-        <li>Dowód rejestracyjny</li>
-        <li>Tablice rejestracyjne</li>
-        <li>Karta pojazdu (jeśli była)</li>
-        <li>Dowód osobisty</li>
-        <li>Twój podpis na naszej umowie</li>
-      </ul>
-    </section>
+      <label for="car">Marka i model auta</label>
+      <input type="text" id="car" name="Marka i model" required>
 
-    <section>
-      <h2>Wypełnij formularz – przygotujemy umowę!</h2>
-      <form id="carForm">
-        <input type="text" placeholder="Imię i nazwisko właściciela" required />
-        <input type="text" placeholder="Adres zamieszkania" required />
-        <input type="text" placeholder="PESEL właściciela" required />
-        <input type="text" placeholder="Marka i model auta" required />
-        <input type="text" placeholder="Numer VIN" required />
-        <input type="text" placeholder="Numer rejestracyjny" required />
-        <input type="text" placeholder="Rok produkcji" required />
-        <input type="text" placeholder="Przebieg" required />
-        <input type="email" placeholder="Twój email (do wysyłki umowy)" required />
-        <button type="submit">Wygeneruj umowę</button>
-        <div class="success">Dziękujemy! Formularz został przesłany. Skontaktujemy się w ciągu 1–2 dni roboczych (pon.–sob. 9:00–14:00) 😊</div>
-      </form>
-    </section>
-  </main>
+      <label for="vin">Numer VIN</label>
+      <input type="text" id="vin" name="VIN" required>
 
-  <script>
-    document.getElementById('carForm').addEventListener('submit', function (e) {
-      e.preventDefault();
+      <label for="plates">Numer rejestracyjny</label>
+      <input type="text" id="plates" name="Numer rejestracyjny" required>
 
-      // Tutaj będzie wysyłka danych do backendu np. przez fetch do /generate-doc
-      // i backend wygeneruje umowę i prześle na maila
+      <label for="year">Rok produkcji</label>
+      <input type="number" id="year" name="Rok produkcji" required>
 
-      this.reset();
-      document.querySelector('.success').style.display = 'block';
-    });
-  </script>
+      <label for="mileage">Przebieg</label>
+      <input type="number" id="mileage" name="Przebieg" required>
+
+      <label for="email">Twój email (do wysyłki umowy)</label>
+      <input type="email" id="email" name="Email" required>
+
+      <label for="phone">Numer telefonu</label>
+      <input type="tel" id="phone" name="Telefon" required>
+
+      <input type="hidden" name="_cc" value="tiptop.zrobione@gmail.com">
+
+      <button type="submit">Wyślij zgłoszenie</button>
+    </form>
+  </section>
 </body>
-
 </html>
