--- a/index.html
+++ b/index.html
@@ -10,134 +10,164 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
     rel="stylesheet"
   />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: "Inter", sans-serif;
+    background-color: #f4f6f8;
+    color: #222222;
+    line-height: 1.6;
+    padding: 1rem;
+  }
+  header {
+    text-align: center;
+    padding: 2rem 1rem 1.2rem;
+    background: linear-gradient(135deg, #e3eaf5 0%, #ffffff 100%);
+    box-shadow: 0 4px 15px rgb(0 0 0 / 0.07);
+    max-width: 900px;
+    margin: 0 auto 3rem;
+    border-radius: 12px;
+    position: relative;
+  }
+  header img#logo {
+    width: 280px;
+    max-width: 90vw;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+  /* Sylwetka samochodów jako linia pod logo - blisko logo */
+  .banner {
+    width: 320px;
+    max-width: 90vw;
+    height: 20px;
+    margin: 0 auto 0.3rem auto; /* minimalny odstęp pod logo */
+    background: url('car-silhouette.png') repeat-x;
+    background-size: contain;
+    animation: slide-left 8s linear infinite;
+    filter: brightness(0.4);
+    opacity: 0.7;
+  }
+  @keyframes slide-left {
+    from {
+      background-position: 100% center;
     }
-    body {
-      font-family: "Inter", sans-serif;
-      background-color: #f8f9fa;
-      color: #212529;
-      line-height: 1.6;
-      padding: 1rem;
+    to {
+      background-position: 0% center;
     }
-    header {
-      text-align: center;
-      padding: 2rem 1rem;
-      background-color: #ffffff;
-      position: relative;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-    header img#logo {
-      width: 300px;
-      max-width: 90vw; /* na mobile zajmie max 90% szerokości */
-      height: auto;
-      display: block;
-      margin: 0 auto 1rem auto;
-    }
-    /* Pasek z sylwetkami pod logo */
-    .banner {
-      width: 320px;
-      max-width: 90vw; /* dostosowanie do mniejszych ekranów */
-      height: 80px;
-      margin: 0 auto 1.5rem auto;
-      background: url('car-silhouette.png') repeat-x;
-      background-size: contain;
-      animation: slide-left 6s linear infinite;
-    }
-    @keyframes slide-left {
-      from {
-        background-position: 100% center;
-      }
-      to {
-        background-position: 0% center;
-      }
-    }
+  }
+  h1 {
+    font-size: 2.2rem;
+    font-weight: 800;
+    color: #0a0a0a;
+    margin-bottom: 1rem;
+    text-shadow: 0 1px 1px rgb(0 0 0 / 0.1);
+  }
+  .slogan {
+    font-size: 1.3rem;
+    margin: 1rem auto;
+    text-align: center;
+    max-width: 700px;
+    padding: 0 1rem;
+    color: #444;
+    font-weight: 500;
+  }
+  .form-container {
+    background-color: #ffffff;
+    padding: 2.5rem 2rem;
+    margin: 0 auto 3rem;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgb(0 0 0 / 0.08);
+    max-width: 600px;
+    width: 100%;
+    transition: box-shadow 0.3s ease;
+  }
+  .form-container:hover {
+    box-shadow: 0 10px 30px rgb(0 0 0 / 0.15);
+  }
+  .form-container h2 {
+    margin-bottom: 1.2rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: #111;
+    text-align: center;
+    letter-spacing: 0.05em;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+  }
+  label {
+    font-weight: 600;
+    font-size: 1rem;
+    color: #333;
+  }
+  input,
+  textarea {
+    padding: 0.75rem 1rem;
+    border: 1.8px solid #d1d9e6;
+    border-radius: 10px;
+    font-size: 1rem;
+    width: 100%;
+    font-family: inherit;
+    transition: border-color 0.25s ease;
+  }
+  input:focus,
+  textarea:focus {
+    border-color: #3a86ff;
+    outline: none;
+    box-shadow: 0 0 6px #3a86ff66;
+  }
+  button {
+    background-color: #3a86ff;
+    color: #fff;
+    padding: 0.85rem;
+    border: none;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    font-weight: 700;
+    cursor: pointer;
+    width: 100%;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 4px 10px rgb(58 134 255 / 0.4);
+  }
+  button:hover {
+    background-color: #2d6cdc;
+    box-shadow: 0 6px 15px rgb(45 108 220 / 0.6);
+  }
+
+  /* Responsywność */
+  @media (max-width: 600px) {
     h1 {
-      font-size: 2rem;
-      font-weight: 800;
-      color: #000000;
-      margin-bottom: 1rem;
+      font-size: 1.6rem;
     }
     .slogan {
-      font-size: 1.25rem;
-      margin: 1rem auto;
-      text-align: center;
-      max-width: 800px;
-      padding: 0 1rem;
+      font-size: 1rem;
+      padding: 0 0.5rem;
     }
     .form-container {
-      background-color: #ffffff;
-      padding: 2rem;
-      margin: 2rem auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-      max-width: 600px;
-      width: 100%;
+      padding: 1.5rem 1rem;
+      margin: 0 auto 2rem;
     }
     .form-container h2 {
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
     }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+    header {
+      padding: 1.5rem 1rem 1rem;
     }
-    label {
-      font-weight: 600;
+    .banner {
+      height: 15px;
+      width: 90vw;
     }
-    input,
-    textarea {
-      padding: 0.75rem;
-      border: 1px solid #ced4da;
-      border-radius: 4px;
-      font-size: 1rem;
-      width: 100%;
-    }
-    button {
-      background-color: #000000;
-      color: #ffffff;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 4px;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-      width: 100%;
-      transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #333333;
-    }
-
-    /* Responsywność */
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-      .slogan {
-        font-size: 1rem;
-        padding: 0 0.5rem;
-      }
-      .form-container {
-        padding: 1rem;
-        margin: 1rem auto;
-      }
-      .form-container h2 {
-        font-size: 1.25rem;
-      }
-      header {
-        padding: 1.5rem 1rem;
-      }
-      .banner {
-        height: 60px;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <header>
@@ -190,3 +220,4 @@
   </section>
 </body>
 </html>
+
