--- a/index.html
+++ b/index.html
@@ -10,168 +10,167 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
     rel="stylesheet"
   />
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: "Inter", sans-serif;
-    background-color: #f4f6f8;
-    color: #222222;
-    line-height: 1.6;
-    padding: 1rem;
-  }
-  header {
-    text-align: center;
-    padding: 2rem 1rem 1.2rem;
-    background: linear-gradient(135deg, #e3eaf5 0%, #ffffff 100%);
-    box-shadow: 0 4px 15px rgb(0 0 0 / 0.07);
-    max-width: 900px;
-    margin: 0 auto 3rem;
-    border-radius: 12px;
-    position: relative;
-  }
-  header img#logo {
-    width: 280px;
-    max-width: 90vw;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-  }
-  /* Sylwetka samochodów jako linia pod logo - blisko logo */
-  .banner {
-    width: 320px;
-    max-width: 90vw;
-    height: 20px;
-    margin: 0 auto 0.3rem auto; /* minimalny odstęp pod logo */
-    background: url('car-silhouette.png') repeat-x;
-    background-size: contain;
-    animation: slide-left 8s linear infinite;
-    filter: brightness(0.4);
-    opacity: 0.7;
-  }
-  @keyframes slide-left {
-    from {
-      background-position: 100% center;
+  <style>
+    /* Reset */
+    *, *::before, *::after {
+      box-sizing: border-box;
     }
-    to {
-      background-position: 0% center;
-    }
-  }
-  h1 {
-    font-size: 2.2rem;
-    font-weight: 800;
-    color: #0a0a0a;
-    margin-bottom: 1rem;
-    text-shadow: 0 1px 1px rgb(0 0 0 / 0.1);
-  }
-  .slogan {
-    font-size: 1.3rem;
-    margin: 1rem auto;
-    text-align: center;
-    max-width: 700px;
-    padding: 0 1rem;
-    color: #444;
-    font-weight: 500;
-  }
-  .form-container {
-    background-color: #ffffff;
-    padding: 2.5rem 2rem;
-    margin: 0 auto 3rem;
-    border-radius: 16px;
-    box-shadow: 0 8px 24px rgb(0 0 0 / 0.08);
-    max-width: 600px;
-    width: 100%;
-    transition: box-shadow 0.3s ease;
-  }
-  .form-container:hover {
-    box-shadow: 0 10px 30px rgb(0 0 0 / 0.15);
-  }
-  .form-container h2 {
-    margin-bottom: 1.2rem;
-    font-size: 1.6rem;
-    font-weight: 700;
-    color: #111;
-    text-align: center;
-    letter-spacing: 0.05em;
-  }
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1.1rem;
-  }
-  label {
-    font-weight: 600;
-    font-size: 1rem;
-    color: #333;
-  }
-  input,
-  textarea {
-    padding: 0.75rem 1rem;
-    border: 1.8px solid #d1d9e6;
-    border-radius: 10px;
-    font-size: 1rem;
-    width: 100%;
-    font-family: inherit;
-    transition: border-color 0.25s ease;
-  }
-  input:focus,
-  textarea:focus {
-    border-color: #3a86ff;
-    outline: none;
-    box-shadow: 0 0 6px #3a86ff66;
-  }
-  button {
-    background-color: #3a86ff;
-    color: #fff;
-    padding: 0.85rem;
-    border: none;
-    border-radius: 10px;
-    font-size: 1.1rem;
-    font-weight: 700;
-    cursor: pointer;
-    width: 100%;
-    text-transform: uppercase;
-    letter-spacing: 0.06em;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 4px 10px rgb(58 134 255 / 0.4);
-  }
-  button:hover {
-    background-color: #2d6cdc;
-    box-shadow: 0 6px 15px rgb(45 108 220 / 0.6);
-  }
-
-  /* Responsywność */
-  @media (max-width: 600px) {
-    h1 {
-      font-size: 1.6rem;
-    }
-    .slogan {
-      font-size: 1rem;
-      padding: 0 0.5rem;
-    }
-    .form-container {
-      padding: 1.5rem 1rem;
-      margin: 0 auto 2rem;
-    }
-    .form-container h2 {
-      font-size: 1.3rem;
+    body {
+      margin: 0;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background: #fff;
+      color: #111;
+      line-height: 1.6;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      padding: 0 1.5rem;
     }
     header {
-      padding: 1.5rem 1rem 1rem;
+      max-width: 720px;
+      margin: 4rem auto 3rem;
+      text-align: center;
+      padding: 0 1rem;
     }
+    header img#logo {
+      width: 280px;
+      max-width: 90vw;
+      height: auto;
+      margin-bottom: 0.2rem;
+      user-select: none;
+    }
+    /* Sylwetka samochodów jako linia pod logo */
     .banner {
-      height: 15px;
-      width: 90vw;
+      width: 320px;
+      max-width: 90vw;
+      height: 24px;
+      margin: 0 auto 1.2rem;
+      background: url('car-silhouette.png') repeat-x;
+      background-size: contain;
+      filter: brightness(0.35);
+      opacity: 0.75;
+      user-select: none;
     }
-  }
-</style>
+    h1 {
+      font-weight: 800;
+      font-size: 2.6rem;
+      margin-bottom: 0.8rem;
+      letter-spacing: -0.02em;
+      color: #000;
+      line-height: 1.2;
+    }
+    .slogan {
+      font-weight: 500;
+      font-size: 1.3rem;
+      color: #444;
+      max-width: 520px;
+      margin: 0 auto;
+      line-height: 1.4;
+    }
+    /* Formularz */
+    section.form-container {
+      max-width: 480px;
+      margin: 2rem auto 4rem;
+      background: #f5f5f7;
+      border-radius: 16px;
+      padding: 2rem 2.5rem;
+      box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);
+      transition: box-shadow 0.3s ease;
+    }
+    section.form-container:hover {
+      box-shadow: 0 12px 36px rgb(0 0 0 / 0.15);
+    }
+    section.form-container h2 {
+      font-weight: 700;
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+      color: #111;
+      text-align: center;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.25rem;
+    }
+    label {
+      font-weight: 600;
+      font-size: 1rem;
+      color: #222;
+    }
+    input, textarea {
+      padding: 0.75rem 1rem;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
+      font-family: inherit;
+    }
+    input:focus, textarea:focus {
+      border-color: #0071e3;
+      outline: none;
+      box-shadow: 0 0 8px rgba(0, 113, 227, 0.3);
+    }
+    button {
+      background-color: #0071e3;
+      color: #fff;
+      padding: 0.9rem;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      font-weight: 700;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      user-select: none;
+      margin-top: 0.5rem;
+    }
+    button:hover,
+    button:focus {
+      background-color: #005bb5;
+    }
+    /* Responsywność */
+    @media (max-width: 480px) {
+      header {
+        margin: 3rem 1rem 2rem;
+      }
+      header img#logo {
+        width: 240px;
+        margin-bottom: 0.15rem;
+      }
+      .banner {
+        width: 260px;
+        height: 18px;
+        margin-bottom: 1rem;
+      }
+      h1 {
+        font-size: 2rem;
+      }
+      .slogan {
+        font-size: 1.1rem;
+        max-width: 90vw;
+      }
+      section.form-container {
+        max-width: 90vw;
+        padding: 1.8rem 1.8rem;
+      }
+      section.form-container h2 {
+        font-size: 1.5rem;
+      }
+      input, textarea {
+        font-size: 0.95rem;
+      }
+      button {
+        font-size: 1rem;
+        padding: 0.85rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
-    <img src="logo - zlomto.pl.png" alt="ZŁOMTO.PL logo" id="logo" />
+    <img id="logo" src="logo - zlomto.pl.png" alt="ZŁOMTO.PL logo" />
     <div class="banner"></div>
     <h1>Sprzedaj auto za 100 zł – legalnie, szybko i bezpiecznie</h1>
     <p class="slogan">
@@ -180,9 +179,9 @@
     </p>
   </header>
 
-  <section class="form-container">
-    <h2>Formularz zgłoszeniowy</h2>
-    <form action="https://formspree.io/f/xwkgrvze" method="POST">
+  <section class="form-container" aria-labelledby="form-title">
+    <h2 id="form-title">Formularz zgłoszeniowy</h2>
+    <form action="https://formspree.io/f/xwkgrvze" method="POST" novalidate>
       <label for="name">Imię i nazwisko właściciela</label>
       <input type="text" id="name" name="Imię i nazwisko" required />
 
@@ -202,16 +201,16 @@
       <input type="text" id="plates" name="Numer rejestracyjny" required />
 
       <label for="year">Rok produkcji</label>
-      <input type="number" id="year" name="Rok produkcji" required />
+      <input type="number" id="year" name="Rok produkcji" required min="1900" max="2099" />
 
       <label for="mileage">Przebieg</label>
-      <input type="number" id="mileage" name="Przebieg" required />
+      <input type="number" id="mileage" name="Przebieg" required min="0" />
 
       <label for="email">Twój email (do wysyłki umowy)</label>
       <input type="email" id="email" name="Email" required />
 
       <label for="phone">Numer telefonu</label>
-      <input type="tel" id="phone" name="Telefon" required />
+      <input type="tel" id="phone" name="Telefon" required pattern="[\d\s\+\-\(\)]+" />
 
       <input type="hidden" name="_cc" value="tiptop.zrobione@gmail.com" />
 
@@ -220,4 +219,3 @@
   </section>
 </body>
 </html>
-
