--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <img src="car-silhouette.png" alt="" />
       </div>
     </div>
-    <h1>Sprzedaj auto za 100 zł – legalnie, szybko i bezpiecznie</h1>
+    <h1>Odbierzemy Twój pojazd bezpłatnie z dowolnego miejsca w Polsce i zapłacimy Ci 100 zł!</h1>
     <p class="slogan">
       Bez stresu i formalności – my zajmiemy się resztą. Wypełnij formularz i
       odbierz umowę kupna-sprzedaży!
@@ -266,5 +266,6 @@
   </section>
 </body>
 </html>
+
 
 
