--- a/index.html
+++ b/index.html
@@ -221,8 +221,12 @@
     </div>
     <h1>Odbierzemy Twój pojazd bezpłatnie z dowolnego miejsca w Polsce i zapłacimy Ci 100 zł!</h1>
     <p class="slogan">
-      Bez stresu i formalności – my zajmiemy się resztą. Wypełnij formularz i
-      odbierz umowę kupna-sprzedaży!
+      Niesprawny? - Nie ma problemu
+      Brak kół? - Nie ma problemu
+      Brak ubezpieczenia? - Nie ma problemu
+    </p>
+    <p class="slogan">
+      My odbierzemy samochod i ty sie nie musisz martwic o nic.
     </p>
   </header>
 
@@ -266,6 +270,7 @@
   </section>
 </body>
 </html>
+
 
 
 
